# Simox

./: .gitignore
for_ramcip_report/ramcip_examples/: .GraspPlannerEvaluatorWindow.cpp.swp  CMakeLists.txt  GraspPlannerEvaluator.cpp  GraspPlannerEvaluator.ui  GraspPlannerEvaluatorWindow.cpp  GraspPlannerEvaluatorWindow.h  README.md
for_ramcip_report/ramcip_examples/data/cluttered_scenes/: ClutteredScene1.xml  ClutteredScene5.xml  ClutteredScene6.xml
for_ramcip_report/ramcip_examples/data/ramcip_objects/ply/: depon.ply  pill_box.ply
for_ramcip_report/ramcip_examples/data/ramcip_objects/wrl/: cup_blue.wrl  cup_red.wrl  depon.wrl  depon.wrl~  pill_box.wrl
for_ramcip_report/ramcip_examples/data/ramcip_objects/xml/: PlateSquare.xml
for_ramcip_report/ramcip_examples/data/ramcip_scenes/: AmitaScene.xml.bak  PlateRoundScene.xml~
for_ramcip_report/ramcip_examples/data/scenes/: .scene.xml.swp  scene.xml
from_nikitas/Simox-F-1_Collision_Free_Grasping/GraspPlanning/: ContactConeGenerator.cpp  ContactConeGenerator.h
from_nikitas/Simox-F-1_Collision_Free_Grasping/GraspPlanning/GraspPlanner/: GenericGraspPlanner.cpp  GenericGraspPlanner.cpp.autosave  GenericGraspPlanner.h
from_nikitas/Simox-F-1_Collision_Free_Grasping/GraspPlanning/GraspQuality/: GraspQualityMeasureWrenchSpace.cpp
from_nikitas/Simox-F-1_Collision_Free_Grasping/collision_free_grasping_example/: .GraspPlannerEvaluatorWindow.cpp.swo  GraspPlannerEvaluator.cpp  GraspPlannerEvaluator.ui  GraspPlannerEvaluatorWindow.cpp  GraspPlannerEvaluatorWindow.h  README.md
from_nikitas/Simox-F-1_Collision_Free_Grasping/ramcip_simox/: .GraspPlannerEvaluator.cpp.swo  GraspPlannerEvaluator.cpp  GraspPlannerEvaluator.ui  GraspPlannerEvaluatorWindow.cpp  GraspPlannerEvaluatorWindow.h
(+326 files in other folders)
